# contracts

./: .prettierignore  Anchor.toml  README.md  metaplex_anchor_nft.json  niftyclick.json  package.json  tsconfig.json
migrations/: deploy.ts
programs/metaplex-anchor-nft/src/: lib.rs
programs/niftyclick/: Cargo.toml
programs/niftyclick/src/: lib.rs
tests/: metaplex-anchor-nft.ts  niftyclick.ts
